# v

./: LICENSE.md  PNP.cpp  cam.txt  readme.md  Презентация.pptx
mqtt_subscriber/: CMakeLists.txt  Ping.cdl  Ping.idl  README.md  cross-build.sh  image-build.sh  result.txt  tsat.txt
mqtt_subscriber/einit/: CMakeLists.txt
mqtt_subscriber/einit/src/: init.yaml.in  security.psl
mqtt_subscriber/resources/: Ping.idl  Server.edl
mqtt_subscriber/resources/sdcard/etc/: dhcpcd.conf
mqtt_subscriber/server/: CMakeLists.txt
mqtt_subscriber/server/src/: server.cpp
mqtt_subscriber/subscriber/: CMakeLists.txt
mqtt_subscriber/subscriber/src/: main.cpp  subscriber.cpp  subscriber.h
